# web-scraper-cli

./: .gitignore  README.md  pyproject.toml
scraper/: package-lock.json  package.json  scraper.js  screenshot-layouts.js
web_scraper_cli/: __init__.py  main.py
