[project]
name = "web-scraper-cli"
version = "1.0.0"
description = "CLI tool for scraping and downloading files from JavaScript-heavy pages using Puppeteer"
authors = [{name = "Orlando Bruno"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
webscrape = "web_scraper_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
